Fix header banner's radius on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -76,13 +76,18 @@ a:hover {
   text-align: center;
   margin: 0 auto 40px;
   position: relative;
+  height: 360px;
 }
 
 .header-bg-ellipse {
-  position: relative;
-  margin: 0 auto;
-  border-radius: 0 0 100% 100%;
+  position: absolute;
+  top: -25%;
+  width: 960px;
+  height: 480px;
+  border-radius: 0 0 480px 480px;
   background-color: #80d8c7;
+  margin-left: 50%;
+  left: -480px;
 }
 
 .site-header .banner .identity {
@@ -90,6 +95,7 @@ a:hover {
   position: relative;
   z-index: 1;
   width: 50%;
+  top: 10%;
 }
 
 .identity img {
@@ -391,6 +397,23 @@ a:hover {
     flex: none;
     border: none;
     border-bottom: 2px dashed #a29ad6;
+  }
+
+  .site-header .banner {
+    height: auto;
+  }
+
+  .header-bg-ellipse {
+    position: relative;
+    width: 100%;
+    height: auto;
+    margin: 0;
+    top: 0;
+    left: 0;
+    border-radius: 0 0 100% 100% / 0 0 200% 200%;
+  }
+  .site-header .banner .identity  {
+    top: 0;
   }
 
   .wrapper,
